--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      
 </head>
 <body>
-    <h1>hi i am ansil ka</h1>
+    <h1>hi i am Mohammed ansil ka</h1>
     <script src="server.js"></script>
 </body>
 </html>
